--- a/README.org
+++ b/README.org
@@ -18,9 +18,11 @@ tar xvf <path/to>/nix-starter-kit.tar.xz
 #+end_src
 4. ~cp user-settings.nix.template user-settings~
 5. ~vi user-settings.nix~ und ausfüllen
-6. Run ~./bootstrap.sh~
-7. Create or add an SSH key pair, register that with our services etc.
-8. At some point, clone the =howto= repository to =~/howto=. This is needed for
+6. To configure "modules" like Emacs, =zsh=, or others, check the README files in
+   their respective subdirectories
+7. Run ~./bootstrap.sh~
+8. Create or add an SSH key pair, register that with our services etc.
+9. At some point, clone the =howto= repository to =~/howto=. This is needed for
    LaTeX support to work properly with AG documents.
 
 ** Usage
