--- a/README.org
+++ b/README.org
@@ -6,22 +6,27 @@ accordingly.
 
 ** Provisioning a fresh system
 
-1. Install the [[https://nixos.org][Nix package manager]] on the target
-2. On the target system, clone this repository to =~/.config/home-manager=, for
+- Install the [[https://nixos.org][Nix package manager]]
+- On the target system, clone /this repository/ to =~/.config/home-manager=, for
    instance:
 #+begin_src shell
 mkdir -p ~/.config
 git clone https://github.com/active-group/nix-starter-kit ~/.config/home-manager
 cd ~/.config/home-manager
 #+end_src
-4. ~cp user-settings.nix.template user-settings~
-5. ~vi user-settings.nix~ and customize
-6. To configure "modules" like Emacs, =zsh=, or others, check the README files in
+- ~cp user-settings.nix.template user-settings.nix~
+- Edit ~user-settings.nix~
+- To configure "modules" like Emacs, =zsh=, or others, check the README files in
    their respective subdirectories
-7. Run ~./bootstrap.sh~
-8. Create or add an SSH key pair, register that with our services etc.
-9. At some point, clone the =howto= repository to =~/howto=. This is needed for
-   LaTeX support to work properly with AG documents.
+- Run ~./bootstrap.sh~ (this just enables Flakes support for Nix by changing a
+  configuration file, and then uses ~home-manager~ to install the first version
+  of your system)
+- For new people: Create or add an SSH key pair and make sure access to our
+  GitLab is working. If you already have one set up, there is nothing for you to
+  do.
+- If you wish to use LaTeX with batteries included, then you need to clone the
+  =howto= repository to =~/howto=. If you already have a working LaTeX setup,
+  you don't need to change anything.
 
 ** Usage
 
