Modularize emacs and controlling

--- a/modules/mac-app-util/README.org
+++ b/modules/mac-app-util/README.org
@@ -4,11 +4,10 @@ This makes wrapper Mac applications available in
 
 =~/Applications/Home Manager Trampolines=
 
-From there, they show up in Spotlight and can be dragged into the
-dock.
+From there, they show up in Spotlight and can be dragged into the dock.
 
-(Nix installs into =~/.nix-profile/Applications=, which is a symlink
-into the Nix store, and thus not stable thru version updates.)
+(Nix installs into =~/.nix-profile/Applications=, which is a symlink into the Nix
+store, and thus not stable thru version updates.)
 
 If the trampoline crashes, try deleting =~/Applications/Home Manager Trampolines=
 and run =home-manager switch= again.
